--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.8'
 
 services:
   vulnerable:
@@ -10,6 +9,7 @@ services:
     volumes:
       - ./vulnerability/app:/var/www/html
       - ./vendor:/var/www/vendor
+      - ./vulnerability/app/images:/var/www/html/images
     environment:
       - MYSQL_HOST=db_vulnerable
       - MYSQL_USER=root
@@ -51,6 +51,7 @@ services:
     command: --bind-address=0.0.0.0
     volumes:
       - db_vulnerable_data:/var/lib/mysql
+      - ./patched/database/db.sql:/docker-entrypoint-initdb.d/db.sql
     networks:
       - app_network  # Ensure db_vulnerable is on the same network as the other services
     ports:
